--- a/_data/travel_committee.yml
+++ b/_data/travel_committee.yml
@@ -11,6 +11,8 @@
   person: Q53590460
 - name: Parul Gupta
   person: Q103027601
+  orcid: 0000-0002-0190-8753
+  twitter: GsParul
   employerLabel_: Oregon State University
 - name: Sue Bello
   orcid: 0000-0003-4606-0597
